# SigProfilerToolkit

./: Dockerfile  README.md  SigProfilerToolkit.py  pyproject.toml  requirements.txt  setup.py
SigProfilerToolkit/: SigProfilerToolkit_CLI.py  __init__.py
SigProfilerToolkit/data/: citations.json
